--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
-FLASK_APP_KEY="any key works"
 FLASK_APP=src.app
 FLASK_DEBUG=1
-DEBUG=TRUE
+DEBUG=True
 PORT=3001
-JWT_SECRET=super-secret-key
-VITE_BASENAME=/
-VITE_BACKEND_URL=https://bookish-zebra-g4p77j66vqgphpjq-3001.app.github.dev/
-VITE_FRONTEND_URL=https://bookish-zebra-g4p77j66vqgphpjq-3000.app.github.dev/
+
+JWT_SECRET_KEY=super-secret-key
+
+VITE_BACKEND_URL=http://localhost:3001
+VITE_FRONTEND_URL=http://localhost:3000
