--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,34 @@
-# ignore all files starting with .
-.*
 
-# track this file .gitignore (i.e. do NOT ignore it)
-!.gitignore
-!.github
-php_errorlog
-.log
+# env
+.env
+.env.local
 
-# do not ignore gitpod and render files
-!.gitpod.Dockerfile
-!.welcome
-!.devcontainer
-!.devcontainer/*
-!Dockerfile.render
-!.gitpod.yml
-!render.yml
-!.render-buildpacks.json
+# frontend
+node_modules/
 
-# track webpack configs (i.e. do NOT ignore it)
-!composer.json
-!webpack.config.js
-!package.json
-!webpack.production.js
-!webpack.development.js
 
-# track readme.md in the root (i.e. do NOT ignore it)
-!README.md
+# python
+__pycache__/
+*.pyc
+.pytest_cache/
 
-# ignore OS generated files
+# logs
+*.log
+
+# otros
 ehthumbs.db
 Thumbs.db
-
-# ignore Editor files
 *.sublime-project
 *.sublime-workspace
 *.komodoproject
-
-# ignore log files and databases
-*.log
 *.sql
 *.sqlite
-
-# ignore compiled files
 *.com
 *.class
 *.dll
 *.exe
 *.o
 *.so
-
-# ignore packaged files
 *.7z
 *.dmg
 *.gz
@@ -58,25 +37,8 @@ Thumbs.db
 *.rar
 *.tar
 *.zip
-
-# ignore node/grunt dependency directories
-node_modules/
-
-# webpack output
-dist/*
-!public/
-!public/*
-
-# ignore the dist directory were our bundle files are going to be
-!.gitkeep
-!.htaccess
-!.eslintrc
-!.env.example
-.now
-
-# backend stuff
 .venv
 database.database
 database.db
 diagram.png
-__pycache__/
+# ignore compiled files
