fix: add missing variable to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ DEBUG=TRUE
 # Front-End Variables
 VITE_BASENAME=/
 #VITE_BACKEND_URL=
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
