--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
 		]
 	},
 	"dependencies": {
+		"chart.js": "^4.5.1",
 		"lucide-react": "^0.563.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.3.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
 		"recharts": "^3.7.0"
