--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.563.0",
