--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ DEBUG=TRUE
 VITE_BASENAME=/
 #VITE_BACKEND_URL=
 JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
+RAPIDAPI_KEY=your-rapidapi-key-here
+GOOGLE_CLIENT_ID=your-google-client-id-here.apps.googleusercontent.com
