--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,9 @@ typing-extensions = "*"
 flask-jwt-extended = "==4.6.0"
 wtforms = "==3.1.2"
 sqlalchemy = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
+requests = "*"
 
 [requires]
 python_version = "3.13"
