--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ sqlalchemy = "*"
 google-auth = "*"
 google-auth-oauthlib = "*"
 requests = "*"
+colorama = "*"
 
 [requires]
 python_version = "3.13"
